<resources>
    <string name="app_name">FoodDrink</string>
    <string name="Slogan">Eat drink now Another matter for later</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="google_maps_key">AIzaSyBu86Xy64zcwMiKCLbsDbjPHQ9iG_5TBh0</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="permission_title">QUYỀN ỨNG DỤNG</string>
    <string name="permission_detail">Ứng dụng cần được cấp nhiều quyền hơn.</string>
    <string name="action_permission">CẤP QUYỀN</string>
    <string name="action_cancel">HỦY</string>

    <string name="error_msg_unknown">Đã xảy ra lỗi không mong muốn</string>
    <string name="error_msg_no_internet">Vui lòng kiểm tra kết nối và thử lại.</string>
    <string name="error_msg">Rất tiếc! không thể tải dữ liệu</string>
    <string name="title_error_msg">LỖI</string>
    <string name="title_info_msg">THÔNG TIN</string>
    <string name="title_vote_employee">Đánh giá nhân viên</string>
    <string name="noresult_msg">Không tìm thấy kết quả</string>

    <string name="dialog_btn_ok">ĐỒNG Ý</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_phone_default">0981751114</string>
    <string name="hint_input_number_phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="pass_default">123456</string>
    <string name="text_sign_in">Sign In</string>
    <string name="title_exits">THOÁT ỨNG DỤNG</string>
    <string name="title_detail_exits">Bạn có chắc muốn thoát ứng dụng?</string>
    <string name="title_sign_in_failed">Sign In failed! Please check phone number or password</string>
    <string name="title_user_not_exist">User not exist in database</string>
    <string name="title_food_detail">Food Name</string>
    <string name="text_discount">Giảm giá</string>
    <string name="buy">Mua ngay</string>
    <string name="title_add">Thêm</string>

    <string name="title_empty_product">Sản phẩm hiện đang hết hàng</string>
    <string name="base_count">Tạm tính</string>
    <string name="cost_transport">Phí vận chuyển</string>
    <string name="total_money">Tổng tiền</string>
    <string name="text_order">Đặt hàng</string>
    <string name="cart">Giỏ hàng</string>

    <string name="vnd">đ</string>
    <string name="title_empty_cart">Giỏ hàng trống</string>
    <string name="user_name">Tên người dùng</string>
    <string name="title_address">Địa chỉ</string>
    <string name="error_phone_is_exits">Phone Number Already Register</string>
    <string name="title_sign_up_success">Sign Up Successfully</string>
    <string name="title_button_sign_in">Sign Up</string>

</resources>
