<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SignIn">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A6000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_number_phone"
                android:inputType="phone"
                android:text="@string/number_phone_default"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@string/pass_default"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_number_phone"
            android:inputType="phone"
            android:text="@string/number_phone_default"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="34sp"
            app:met_baseColor="@color/text_color"
            android:visibility="gone"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/text_color"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@string/pass_default"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="34sp"
            app:met_baseColor="@color/text_color"
            android:visibility="gone"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/text_color"
            app:met_singleLineEllipsis="true" />

        <Button
            android:id="@+id/btnSingIn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/text_sign_in"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
