<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartActivity">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/layout_header_back">

    </include>

    <RelativeLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutHeader">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rylCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layoutEnd"
            tools:listitem="@layout/item_cart" />

        <LinearLayout
            android:id="@+id/layoutEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/Black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:visibility="gone">

                <TextView
                    style="@style/Widget.AppCompat.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base_count" />

                <TextView
                    android:id="@+id/textCountTem"
                    style="@style/Widget.AppCompat.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dp_5"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:visibility="gone">

                <TextView
                    style="@style/Widget.AppCompat.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_transport" />

                <TextView
                    style="@style/Widget.AppCompat.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:text="0đ"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:visibility="gone">

                <TextView
                    style="@style/Widget.AppCompat.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_money" />

                <TextView
                    android:id="@+id/textPriceFinal"
                    style="@style/Widget.AppCompat.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dp_5"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal"
                android:weightSum="5">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:button="@null"
                    android:clickable="true"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="@dimen/dp_5" />

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Widget.AppCompat.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tổng thanh toán:" />

                    <TextView
                        style="@style/Widget.AppCompat.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Red_red" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textOk"
                    style="@style/Widget.AppCompat.TextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:background="@drawable/bg_button_light"
                    android:gravity="center"
                    android:text="text"
                    android:textColor="@color/de_fault"
                    android:textSize="@dimen/textSize_20" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonOK"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/custom_button"
                android:text="@string/text_order"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textNoItemCart"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/title_empty_cart"
        android:visibility="gone" />

</RelativeLayout>
